Personalize messages, add celebration GIF, fix envelope, pulverize on 2nd click

--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
         </div>
         <h1 class="celebration-title">Yay! 🎉</h1>
         <p class="celebration-message">I knew you'd say yes!</p>
+        <div class="celebration-gif">
+          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExajhxNXJjbXU5NG83dnR2ZWt3cW1vdWc3cDU5amp2ejR3aDlldnlncyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/bDr2n9RpIIvAW6BtbT/giphy.gif" alt="Love" />
+        </div>
         <div class="love-letter-final">
           <p>
-            Bujjulu, you make my heart skip a beat every single day. I can't wait to
-            spend this Valentine's Day — and every day after — with you.
+            kutty, no matter what we're figuring out right now, you still mean a lot to me. I just wanted you to know that
           </p>
           <p class="signature">Forever yours ❤️</p>
         </div>
